root/frontend/src/pages/DetailedListView/DetailedListView.css
* {
  font-family: Verdana;
}

.container {
  overflow-x: hidden;
}

.back-button {
  position: fixed;
  right: 0;
  top: 20%;
  width: 60px;
  height: 60px;
  padding: 5px;
  border-top-left-radius: 10px;
  border-bottom-left-radius: 10px;
  background-color: #89cff0;
  border: none;
}

.back-button:hover {
  width: 85px;
}

.dlv-container {
  height: auto;
  display: flex;
  flex-flow: column;
}

.dlv-header {
  height: 275px;
  display: flex;
}

.img-container {
  border: 2px solid;
  flex-shrink: 0;
  width: 181px;
  height: auto;
  box-shadow: 1px 2px 3px 4px rgba(20, 20, 20, 0.4);
  overflow: hidden;
}

.header-items {
  width: 100%;
  height: 100%;
  align-self: flex-end;
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  margin-right: 5px;
  overflow: hidden;
}

.list-type {
  margin: 15px;
  align-self: flex-start;
  flex: 0 0 auto;
  overflow: hidden;
}

.details-container {
  align-self: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
}

.list-name {
  font-size: 5vw;
  margin: 5px;
  padding: 5px;
  line-height: 0.8;
  overflow: hidden;
}

.list-desc {
  height: 20%;
  margin: 5px;
  padding: 5px;
  flex: 1 0 auto;

  overflow: clip;
  text-overflow: ellipsis;
  white-space: pre-wrap;
}

.updated-text {
  margin: 5px;

  font-size: 80%;
}

.list-items-container {
  margin-top: 30px;

  flex-grow: 1;
}

